--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+# backend/requirements.txt
 python-telegram-bot==20.7
-supabase==1.0.3
-httpx==0.24.1
+supabase-py==0.2.1
+httpx==0.23.3
 python-dotenv==1.0.0
-flask==2.3.3
-gunicorn==21.2.0
+flask==2.2.3
+gunicorn==20.1.0
+requests==2.28.2
